# codebase-mcp-server

./: .gitignore  LICENSE  README.md  __init__.py  embeddings.py  indexer.py  pyproject.toml  server.py
